--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Clone BoardCaster repository
-      run: git clone https://github.com/Axi404/BoardCaster.git
+      run: git clone https://github.com/CS-BAOYAN/BoardCaster.git
 
     - name: Copy and rename output.md to README.md
       run: |
